k8s/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: label-validator
webhooks:
  - name: labels.devops.local
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Fail
    clientConfig:
      service:
        name: label-validator
        namespace: kube-system
        path: /validate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREekNDQWZlZ0F3SUJBZ0lVZkhvT0tlWVJxdEFZZ1pGZ1o4ZU0zRlJvZm5rd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0Z6RVZNQk1HQTFVRUF3d01ZV1J0YVhOemFXOXVYMk5oTUI0WERUSTFNVEF4TWpFek1qWTFOVm9YRFRJMgpNVEF4TWpFek1qWTFOVm93RnpFVk1CTUdBMVVFQXd3TVlXUnRhWE56YVc5dVgyTmhNSUlCSWpBTkJna3Foa2lHCjl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFrYk84aFFUSHBIbDRwZHJjRkh3UUVJM1N4QmJBai9xY0F1cW8KYkEyRmltRzkwa1NrbVluRkVid1BDNG5vdHNWdkI2VFdHa3RRNXlHWDZudUlnclhtQ2d6bEZTUmFlZVdieVpuKwpOK1BseFhOUTdI [...]
    rules:
      - apiGroups: ["", "apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods", "deployments"]
    namespaceSelector: {}
